--- a/res/values-sw600dp-port/dimens.xml
+++ b/res/values-sw600dp-port/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2009 The Android Open Source Project
+<!-- Copyright (C) 2010 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -16,13 +16,50 @@
 
 <resources>
 <!-- AppsCustomize -->
-    <dimen name="apps_customize_cell_width">96dp</dimen>
-    <dimen name="apps_customize_cell_height">108dp</dimen>
-    <dimen name="apps_customize_pageLayoutWidthGap">24dp</dimen>
-    <dimen name="apps_customize_pageLayoutHeightGap">24dp</dimen>
-    <dimen name="apps_customize_pageLayoutPaddingTop">25dp</dimen>
-    <dimen name="apps_customize_pageLayoutPaddingBottom">10dp</dimen>
+    <integer name="apps_customize_maxCellCountX">-1</integer>
+    <integer name="apps_customize_maxCellCountY">7</integer>
+    <dimen name="apps_customize_pageLayoutWidthGap">36dp</dimen>
+    <dimen name="apps_customize_pageLayoutHeightGap">36dp</dimen>
+    <dimen name="apps_customize_pageLayoutPaddingLeft">24dp</dimen>
+    <dimen name="apps_customize_pageLayoutPaddingRight">24dp</dimen>
+    <!-- We can also afford to have a slightly wider portrait layout in
+         xlarge -->
+    <integer name="apps_customize_widget_cell_count_x">3</integer>
+    <integer name="apps_customize_widget_cell_count_y">3</integer>
 
-<!-- QSB -->
-    <dimen name="qsb_bar_height">54dp</dimen>
+
+ 
+
+    
+<!-- Workspace -->
+    <!-- the area at the edge of the screen that makes the workspace go left
+         or right while you're dragging. -->
+    <dimen name="scroll_zone">40dp</dimen>
+    <dimen name="workspace_page_spacing">24dp</dimen>
+
+    <dimen name="qsb_bar_height">102dp</dimen>
+    <dimen name="qsb_bar_height_inset">102dp</dimen>
+    <dimen name="qsb_padding_left">72dp</dimen>
+    <dimen name="qsb_padding_right">72dp</dimen>
+    <!-- We offset the proxy to overlap with the voice icon -->
+    <dimen name="qsb_voice_proxy_padding_right">100dp</dimen>
+
+    <integer name="apps_customize_cling_focused_x">2</integer>
+    <integer name="apps_customize_cling_focused_y">2</integer>
+
+    <!-- Divider width set to match the qsb width -->
+    <dimen name="workspace_divider_padding_left">72dp</dimen>
+    <dimen name="workspace_divider_padding_right">72dp</dimen>
+
+<!-- Hotseat -->
+    <dimen name="hotseat_width_gap">14dp</dimen>
+    <dimen name="button_bar_height">62dp</dimen>
+    <dimen name="button_bar_height_plus_padding">82dp</dimen>
+    <dimen name="button_bar_height_bottom_padding">5dp</dimen>
+    
+
+<!-- Cling -->
+    <!-- The offset for the text in the cling -->
+    <dimen name="cling_text_block_offset_x">80dp</dimen>
+    <dimen name="cling_text_block_offset_y">160dp</dimen>
 </resources>
