--- a/res/values-sw600dp/config.xml
+++ b/res/values-sw600dp/config.xml
@@ -1,28 +1,35 @@
 <resources>
     <integer name="cell_count_x">6</integer>
-    <integer name="cell_count_y">6</integer>
-    <integer name="hotseat_cell_count">7</integer>
-    <integer name="hotseat_all_apps_index">3</integer>
-    <bool name="allow_rotation">true</bool>
+    <integer name="cell_count_y">4</integer>
+    <integer name="hotseat_cell_count">9</integer>
+    <integer name="hotseat_all_apps_index">4</integer>
+    <bool name="config_largeHeap">true</bool>
+    <bool name="is_large_screen">true</bool>
 
-    <!-- Whether or not to use custom clings if a custom workspace layout is passed in -->
-    <bool name="config_useCustomClings">true</bool>
-
-<!-- DragController -->
-    <integer name="config_flingToDeleteMinVelocity">-1000</integer>
+<!-- AllApps/Customize/AppsCustomize -->
+    <!-- Out of 100, the percent to shrink the workspace during spring loaded mode. -->
+    <integer name="config_workspaceSpringLoadShrinkPercentage">90</integer>
 
 <!-- Folders -->
     <!-- Folder max bounds and max number of items. Note: folder_max_count_x * folder_max_count_y
         >= folder_max_num_items. When these are set to -1, they are automatically determined. -->
-    <integer name="folder_max_count_x">6</integer>
-    <integer name="folder_max_count_y">6</integer>
-    <integer name="folder_max_num_items">36</integer>
+    <integer name="folder_max_count_x">-1</integer>
+    <integer name="folder_max_count_y">-1</integer>
+    <integer name="folder_max_num_items">-1</integer>
 
-    <!-- Camera distance for the overscroll effect. We use a higher value here because the 
-         workspace screens run nearly flush to the edge of the screen-->
-    <integer name="config_cameraDistance">14000</integer>
+<!-- Workspace -->
+    <!-- Whether or not the drop targets drop down as opposed to fade in -->
+    <bool name="config_useDropTargetDownTransition">true</bool>
+    <!-- Whether or not to fade the side pages -->
+    <bool name="config_workspaceFadeAdjacentScreens">true</bool>
+
+    <!-- Camera distance for the overscroll effect -->
+    <integer name="config_cameraDistance">18000</integer>
 
 <!-- Hotseat -->
-    <!-- must be between 0 and 100 -->
+    <bool name="hotseat_transpose_layout_with_orientation">false</bool>
+    
+  
+     <bool name="allow_rotation">true</bool>
     <integer name="hotseat_item_scale_percentage">80</integer>
 </resources>
