--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -14,13 +14,45 @@
      limitations under the License.
 -->
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:launcher="http://schemas.android.com/apk/res/com.android.launcher">
     <!-- UI -->
     <PreferenceCategory android:title="@string/preferences_interface_title">
         <!-- Homescreen -->
         <PreferenceScreen android:key="ui_homescreen"
             android:title="@string/preferences_interface_homescreen_title">
-
+            <PreferenceCategory android:title="@string/preferences_interface_homescreen_general_category">
+                <com.android.launcher2.preference.DoubleNumberPickerPreference android:key="ui_homescreen_grid"
+                    android:title="@string/preferences_interface_homescreen_general_grid_title"
+                    android:summary="@string/preferences_interface_homescreen_general_grid_summary"
+                    launcher:pickerTitle1="@string/preferences_interface_homescreen_general_grid_rows_title"
+                    launcher:pickerTitle2="@string/preferences_interface_homescreen_general_grid_columns_title"
+                    launcher:defaultValue1="4"
+                    launcher:defaultValue2="4"
+                    launcher:max1="7"
+                    launcher:min1="3"
+                    launcher:max2="7"
+                    launcher:min2="3" />
+                <CheckBoxPreference android:key="ui_homescreen_general_search"
+                    android:title="@string/preferences_interface_homescreen_general_search_title"
+                    android:summary="@string/preferences_interface_homescreen_general_search_summary"
+                    android:defaultValue="true" />
+                <CheckBoxPreference android:key="ui_homescreen_general_resize_any_widget"
+                    android:title="@string/preferences_interface_homescreen_general_resize_any_widget_title"
+                    android:summary="@string/preferences_interface_homescreen_general_resize_any_widget_summary" />
+            </PreferenceCategory>
+            <PreferenceCategory android:title="@string/preferences_interface_homescreen_indicator_category">
+            </PreferenceCategory>
+            <PreferenceCategory android:title="@string/preferences_interface_homescreen_scrolling_category">
+               <CheckBoxPreference android:key="ui_homescreen_indicator_enable"
+                    android:title="@string/preferences_interface_homescreen_indicator_enable_title"
+                    android:summary="@string/preferences_interface_homescreen_indicator_enable_summary"
+                    android:defaultValue="true" />
+                <CheckBoxPreference android:key="ui_homescreen_indicator_background"
+                    android:title="@string/preferences_interface_homescreen_indicator_background_title"
+                    android:summary="@string/preferences_interface_homescreen_indicator_background_summary"
+                    android:defaultValue="true" />
+            </PreferenceCategory>
         </PreferenceScreen>
 
         <!-- Drawer -->
@@ -38,11 +70,19 @@
         <!-- Icons -->
         <PreferenceScreen android:key="ui_icons"
             android:title="@string/preferences_interface_icons_title">
+        </PreferenceScreen>
+
+        <!-- General -->
+        <PreferenceScreen android:key="ui_general"
+            android:title="@string/preferences_interface_general_title">
 
         </PreferenceScreen>
     </PreferenceCategory>
 
-    <!-- General -->
-    <PreferenceCategory android:title="@string/preferences_general_title">
+    <!-- Application -->
+    <PreferenceCategory android:title="@string/preferences_application_title">
+        <Preference android:key="application_version"
+            style="?android:preferenceInformationStyle"
+            android:summary="@string/application_copyright" />
     </PreferenceCategory>
 </PreferenceScreen>
