--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -55,6 +55,10 @@
                     android:summary="@string/preferences_interface_homescreen_general_resize_any_widget_summary" />
             </PreferenceCategory>
             <PreferenceCategory android:title="@string/preferences_interface_homescreen_scrolling_category">
+                <CheckBoxPreference android:key="ui_homescreen_scrolling_scroll_wallpaper"
+                    android:title="@string/preferences_interface_homescreen_scrolling_scroll_wallpaper_title"
+                    android:summary="@string/preferences_interface_homescreen_scrolling_scroll_wallpaper_summary"
+                    android:defaultValue="true" />
             </PreferenceCategory>
             <PreferenceCategory android:title="@string/preferences_interface_homescreen_indicator_category">
                <CheckBoxPreference android:key="ui_homescreen_indicator_enable"
