Launcher2: show / fade app drawer page indicator
also comment out grid size preference

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -22,7 +22,7 @@
         <PreferenceScreen android:key="ui_homescreen"
             android:title="@string/preferences_interface_homescreen_title">
             <PreferenceCategory android:title="@string/preferences_interface_homescreen_general_category">
-                <com.android.launcher2.preference.DoubleNumberPickerPreference android:key="ui_homescreen_grid"
+          <!--  <com.android.launcher2.preference.DoubleNumberPickerPreference android:key="ui_homescreen_grid"
                     android:title="@string/preferences_interface_homescreen_general_grid_title"
                     android:summary="@string/preferences_interface_homescreen_general_grid_summary"
                     launcher:pickerTitle1="@string/preferences_interface_homescreen_general_grid_rows_title"
@@ -32,7 +32,7 @@
                     launcher:max1="7"
                     launcher:min1="3"
                     launcher:max2="7"
-                    launcher:min2="3" />
+                    launcher:min2="3" /> -->
                 <com.android.launcher2.preference.NumberPickerPreference android:key="ui_homescreen_screens"
                     android:title="@string/preferences_interface_homescreen_general_screens_title"
                     android:summary="@string/preferences_interface_homescreen_general_screens_summary"
@@ -80,6 +80,17 @@
                     android:title="@string/preferences_interface_drawer_widgets_join_apps_title"
                     android:summary="@string/preferences_interface_drawer_widgets_join_apps_summary"
                     android:defaultValue="true" />
+            </PreferenceCategory>
+            <PreferenceCategory android:title="@string/preferences_interface_drawer_indicator_category">
+                <CheckBoxPreference android:key="ui_drawer_indicator_enable"
+                    android:title="@string/preferences_interface_drawer_indicator_enable_title"
+                    android:summary="@string/preferences_interface_drawer_indicator_enable_summary"
+                    android:defaultValue="true" />
+                <CheckBoxPreference android:key="ui_drawer_indicator_fade"
+                    android:title="@string/preferences_interface_drawer_indicator_fade_title"
+                    android:summary="@string/preferences_interface_drawer_indicator_fade_summary"
+                    android:defaultValue="true"
+                    android:dependency="ui_drawer_indicator_enable" />
             </PreferenceCategory>
         </PreferenceScreen>
 
