--- a/res/xml/preferences_icons.xml
+++ b/res/xml/preferences_icons.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2014 Matricom
+<!-- Copyright (C) 2009 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-  
+
           http://www.apache.org/licenses/LICENSE-2.0
-  
+
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -14,13 +14,11 @@
      limitations under the License.
 -->
 
-<resources>
-
-    <!-- roughly a status bar (for vertically centering the all apps
-         home icon in landscape) -->
-    <dimen name="status_bar_height">25dip</dimen>
-
-    <!-- Preferences -->
-    <dimen name="header_icon_width">28dp</dimen>
-
-</resources>
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:launcher="http://schemas.android.com/apk/res/com.android.launcher"
+    android:key="ui_general"
+    android:title="@string/preferences_interface_icons_title">
+        <CheckBoxPreference android:key="ui_icons_hide_icon_labels"
+            android:title="@string/preferences_interface_icons_hide_icon_labels_title"
+            android:summary="@string/preferences_interface_icons_hide_icon_labels_summary" />
+</PreferenceScreen>
